[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/images/rooms/slave_trader/slave_trader.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/UI/FontSmal.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Rooms/mentor/MoveButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Rooms/slave_trader/slaveTrader.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/LoadOut/GoldSign.tscn" type="PackedScene" id=5]

[node name="SlaveTrader" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 1080.0
margin_bottom = 1000.0
rect_min_size = Vector2( 0, 1000 )

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_top = 4.0
margin_right = 1080.0
margin_bottom = 1004.0
rect_min_size = Vector2( 0, 1000 )
texture = ExtResource( 1 )
expand = true

[node name="GoldSign" parent="Control" instance=ExtResource( 5 )]
margin_bottom = -880.0

[node name="Label" type="Label" parent="."]
margin_top = 1004.0
margin_right = 1080.0
margin_bottom = 1130.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Which move shoud i teach you?"
align = 1
valign = 1
autowrap = true

[node name="VBox" type="VBoxContainer" parent="."]
margin_top = 1134.0
margin_right = 1080.0
margin_bottom = 1661.0
rect_min_size = Vector2( 0, 520 )

[node name="Button" parent="VBox" instance=ExtResource( 3 )]
rect_min_size = Vector2( 0, 173 )

[node name="Button2" parent="VBox" instance=ExtResource( 3 )]
margin_top = 177.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 173 )

[node name="Button3" type="Button" parent="VBox"]
margin_top = 354.0
margin_right = 1080.0
margin_bottom = 527.0
rect_min_size = Vector2( 0, 173 )
custom_fonts/font = ExtResource( 2 )
text = "Sell"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 1665.0
margin_right = 1080.0
margin_bottom = 1905.0
custom_constants/separation = -2

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_right = 540.0
margin_bottom = 240.0
rect_min_size = Vector2( 540, 240 )
custom_fonts/font = ExtResource( 2 )
text = "Loadout"

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 538.0
margin_right = 1078.0
margin_bottom = 240.0
rect_min_size = Vector2( 540, 100 )
custom_fonts/font = ExtResource( 2 )
text = "Back"

[connection signal="bought" from="VBox/Button" to="." method="_on_Button_pressed"]
[connection signal="bought" from="VBox/Button2" to="." method="_on_Button_pressed"]
[connection signal="button_up" from="VBox/Button3" to="." method="_on_button_sell"]
[connection signal="button_up" from="HBoxContainer/Button2" to="." method="_on_Button2_load_out"]
[connection signal="button_up" from="HBoxContainer/Button" to="." method="_on_Button_exit"]
